<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content" >

    <EditText
        android:id="@+id/etIP"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:hint="IP address of Robot"
        android:ems="1"
        android:visibility="visible"
        android:layout_below="@+id/last_poi"
        android:layout_alignParentStart="true"
        android:layout_marginTop="20dp" />

    <LinearLayout
        android:id="@+id/debug_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:orientation="vertical"
        android:paddingLeft="5dp" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >
            <TextView
                android:id="@+id/adf_uuid_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/relocalization_status"/>

            <TextView
                android:id="@+id/relocalization_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"></LinearLayout>
        </LinearLayout>



        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="POSE"/>

            <TextView
                android:id="@+id/pose0"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"></LinearLayout>
        </LinearLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="POSE"/>

            <TextView
                android:id="@+id/pose1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"></LinearLayout>
        </LinearLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/pose2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"></LinearLayout>
        </LinearLayout>


    </LinearLayout>

    <Button
        android:id="@+id/save_adf_button"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:text="@string/save_adf"
        android:onClick="saveAdfClicked"/>

    <Button
        android:id="@+id/save_adf_poi"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/save_poi"
        android:onClick="savePoiClicked"
        android:layout_alignParentBottom="true"
        android:layout_toEndOf="@+id/save_adf_button" />

    <Button
        android:id="@+id/btnBind"
        android:text="bind"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:onClick="onClick"
        android:layout_alignParentBottom="true"
        android:layout_toEndOf="@+id/save_adf_poi" />

    <Button
        android:id="@+id/btnSend"
        android:text="SEND"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:onClick="onClick"
        android:layout_alignParentBottom="true"
        android:layout_toEndOf="@+id/btnBind" />

    <Button
        android:id="@+id/btnStop"
        android:text="STOP"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:onClick="onClick"
        android:layout_alignParentBottom="true"
        android:layout_toEndOf="@+id/btnSend" />


    <TextView
        android:id="@+id/last_poi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/debug_text"
        android:text="Last POI : " />

    <Button
        android:id="@+id/buttonTest"
        android:layout_height="wrap_content"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="100dp"
        android:text="Button"
        android:layout_alignParentBottom="true"
        android:layout_toEndOf="@+id/btnStop" />

</RelativeLayout>
